Dependency upgrades (#744)
* Update dependencies

* Upgrade to Micronaut 2.1.1 / modify test

* Fix issues with JSON deserialization of page

* Enable preview on JDK 15 / Use up to date Oracle container

Co-authored-by: graemerocher <graeme.rocher@gmail.com>