@@ -49,6 +49,14 @@ subprojects { Project subproject ->
             }
             testImplementation "io.micronaut.test:micronaut-test-spock:$micronautTestVersion"        
         }
+
+        tasks.withType(Test) {
+            jvmArgs '-Xmx2048m'
+            systemProperty "micronaut.cloud.platform", "OTHER"
+            if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_15)) {
+                jvmArgs "--enable-preview"
+            }
+        }
     }
     
 }
